--- a/komunat/src/app/share/share.page.html
+++ b/komunat/src/app/share/share.page.html
@@ -1,9 +1,6 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>share</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content padding>
-
-</ion-content>
+<ion-row>
+  <ion-col size="12">
+      <h2 class="title" text-center>GLÜCKWUNSCH!</h2>
+      <p>Dein Ergebnis steht fest.</p>
+  </ion-col>
+</ion-row>
