--- a/komunat/src/app/matches/matches.page.scss
+++ b/komunat/src/app/matches/matches.page.scss
@@ -4,11 +4,6 @@
     height: auto !important;
 }
 
-img {
-    width: 100px;
-    height:100px;
-    vertical-align: top;
-}
 
 .progressBg {
     background-color: var(--komunat-gray-light);
@@ -30,7 +25,7 @@ img {
     text-align:right;
     padding-right:10px;
     padding-bottom:5px;
-    margin-top: -4vh;
+    margin-top: -3vh;
     font-size: 2vh;
 }
 
@@ -118,6 +113,48 @@ ion-row {
 }
 
 .title {
-    font-size: 5vh;
+    font-size: 4vh;
     margin-top:0px;
+}
+
+
+// Substitutes
+.substituteList ion-avatar {
+    width: 25vw;
+    height: 25vw;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.substituteImg {
+
+}
+
+.inceptedRow ion-col{
+    margin-bottom: 5px;
+    padding:0px;
+}
+
+.subsHeader {
+    margin-top:0px;
+}
+
+.subsDescription p{
+    margin-left:10px;
+}
+
+.subsDescription h2{
+    margin-left:8px;
+}
+
+.subsContainer {
+    margin:auto;
+    margin-top: 10px;
+    border-radius: 20px;
+    -webkit-box-shadow: 0px 0px 41px 14px rgba(0,0,0,0.06);
+    -moz-box-shadow: 0px 0px 41px 14px rgba(0,0,0,0.06);
+    box-shadow: 0px 0px 41px 14px rgba(0,0,0,0.06);
+    width:85vw;
+    height:auto;
+    min-height: 10px;
 }
