--- a/komunat/src/theme/variables.scss
+++ b/komunat/src/theme/variables.scss
@@ -11,7 +11,7 @@
   --komunat-red:#FC735D;
 
   /** primary **/
-  --ion-color-primary: #3880ff;
+  --ion-color-primary: #59BCED;
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
@@ -19,7 +19,7 @@
   --ion-color-primary-tint: #4c8dff;
 
   /** secondary **/
-  --ion-color-secondary: #0cd1e8;
+  --ion-color-secondary: #4C4D4F;
   --ion-color-secondary-rgb: 12, 209, 232;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
