[KMT] WIP commit

--- a/komunat/src/app/app.component.html
+++ b/komunat/src/app/app.component.html
@@ -1,4 +1,14 @@
 <ion-app>
+  <ion-header>
+      <ion-toolbar>
+          <ion-buttons slot="primary">
+          </ion-buttons>
+          <ion-title><img class="logo" src="../../assets/img/logo.png"/></ion-title>
+          <ion-buttons slot="end">
+            <ion-menu-button class="menu" autoHide="false"></ion-menu-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
   <ion-split-pane>
     <ion-menu>
       <ion-header>
