--- a/komunat/src/app/content/content.page.html
+++ b/komunat/src/app/content/content.page.html
@@ -1,24 +1,23 @@
-<ion-content>
-
-    <img class="logo" src="../../assets/img/logo.png"/>
-    <h4>Welche Aufgabe ist dir wichtiger</h4>
-    <ion-card class="opt0 upper" (click) ="selected(0)">
-        <ion-card-header>
-        </ion-card-header>
-        <ion-card-content >
-            <h2 class=".opt0">{{this.btn0Val.name}}</h2>
-        </ion-card-content>
-    </ion-card>
-    <ion-card class="opt1 lower"  (click) ="selected(1)">
-        <ion-card-header>
-        </ion-card-header>
-        <ion-card-content>
-              <h2 class=".opt1">{{this.btn1Val.name}}</h2>
-        </ion-card-content>
-      </ion-card>
-      <div class="spinner">
-          <div class="cube1"></div>
-          <div class="cube2"></div>
+<div class="container">
+        <ion-row>
+            <ion-col size="6">
+            <p>Welche Aufgabe ist dir wichtiger?</p>
+            </ion-col>
+            <ion-col size="4">
+            <p>AUFGABE</p>
+            </ion-col>
+        </ion-row>
+        <div class="buttonSection">
+        <ion-card class="opt0 upper" (click) ="selected(0)">
+                <h2 class=".opt0 beautify">{{this.btn0Val.name}}</h2>
+        </ion-card>
+        <ion-card class="opt1 lower"  (click) ="selected(1)">
+                  <h2 class=".opt1 beautify">{{this.btn1Val.name}}</h2>
+          </ion-card>
+          <div class="spinner">
+              <div class="cube1"></div>
+              <div class="cube2"></div>
+            </div>
         </div>
+    </div>
     
-</ion-content>
