--- a/komunat/src/app/home/home.page.scss
+++ b/komunat/src/app/home/home.page.scss
@@ -1,38 +1,33 @@
-.container {
-    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
-    height: calc(var(--vh, 1vh) * 100);
-}
-
-.logo {
-  width: 80vw;
-  margin: auto;
-  margin-top: 1em;
-  display: block;
-}
-
-.title {
-  width: 80vw;
-  margin: auto;
-  margin-top: 2em;
-  display: block;
-  text-align: center;
-  color: #59BCED;
-}
-
-.landing_text {
-  margin-top: 1em;
-  margin: 30px;
-  display: block;
-  color: #4C4D4F;
+.container
+{
+   height:80vh;
+   max-height: 80vh;
+   width:100%; /* or whatever width you want. */
+   display: inline-block;
+   margin-top:10vh;
 }
 
 .goBtn
 {
+  margin-top:10vh;
+  bottom: 10vh;
   height: 8vh;
   margin: 25px;
 }
 
 .instruction {
-  height:auto;
-  width:100vw;
+  height:30vh;
+  width:auto;
+}
+
+h2 {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: bold;
+}
+
+p {
+  font-family: 'Source Sans Pro', sans-serif;
+  margin-bottom: 10vh;
+  margin-right:2vw;
+  margin-left: 2vw;
 }
