--- a/komunat/src/app/komunat/komunat.page.html
+++ b/komunat/src/app/komunat/komunat.page.html
@@ -1,24 +1,22 @@
-<ion-content>
-
-    <img class="logo" src="../../assets/img/logo.png"/>
-    <h4>Welcher Wert ist dir wichtiger</h4>
+<div class="container">
+    <ion-row>
+        <ion-col size="6">
+        <p>Welcher Wert ist dir wichtiger?</p>
+        </ion-col>
+        <ion-col size="4">
+        <p>WERTE</p>
+        </ion-col>
+    </ion-row>
+    <div class="buttonSection">
     <ion-card class="opt0 upper" (click) ="selected(0)">
-        <ion-card-header>
-        </ion-card-header>
-        <ion-card-content >
-            <h2 class=".opt0">{{this.btn0Val.name}}</h2>
-        </ion-card-content>
+            <h2 class=".opt0 beautify">{{this.btn0Val.name}}</h2>
     </ion-card>
     <ion-card class="opt1 lower"  (click) ="selected(1)">
-        <ion-card-header>
-        </ion-card-header>
-        <ion-card-content>
-              <h2 class=".opt1">{{this.btn1Val.name}}</h2>
-        </ion-card-content>
+              <h2 class=".opt1 beautify">{{this.btn1Val.name}}</h2>
       </ion-card>
       <div class="spinner">
           <div class="cube1"></div>
           <div class="cube2"></div>
         </div>
-    
-</ion-content>
+    </div>
+</div>
