--- a/komunat/src/theme/variables.scss
+++ b/komunat/src/theme/variables.scss
@@ -15,8 +15,8 @@
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-shade: #9cdcfc;
+  --ion-color-primary-tint: #9cdcfc;
 
   /** secondary **/
   --ion-color-secondary: #4C4D4F;
