--- a/komunat/src/app/app.component.html
+++ b/komunat/src/app/app.component.html
@@ -13,7 +13,7 @@
     <ion-menu>
       <ion-header>
         <ion-toolbar>
-          <ion-title>Menu</ion-title>
+          <ion-title>Menü</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content>
