--- a/komunat/src/app/komunat/komunat.page.scss
+++ b/komunat/src/app/komunat/komunat.page.scss
@@ -23,59 +23,7 @@ You can also target devices with aspect ratio. */
     width: auto;
   }                
 }
-
-.spinner {
-    width: 80px;
-    height: 80px;
-    position: absolute;
-    top:50%;
-    left: 50%;
-    margin-left: -30px;
-  }
-  
-  .cube1, .cube2 {
-    background-color: #333;
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    -webkit-animation: sk-cubemove 1.8s infinite ease-in-out;
-    animation: sk-cubemove 1.8s infinite ease-in-out;
-  }
-  
-  .cube2 {
-    -webkit-animation-delay: -0.9s;
-    animation-delay: -0.9s;
-  }
-  
-  @-webkit-keyframes sk-cubemove {
-    25% { -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5) }
-    50% { -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg) }
-    75% { -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5) }
-    100% { -webkit-transform: rotate(-360deg) }
-  }
-  
-  @keyframes sk-cubemove {
-    25% { 
-      transform: translateX(42px) rotate(-90deg) scale(0.5);
-      -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5);
-    } 50% { 
-      transform: translateX(42px) translateY(42px) rotate(-179deg);
-      -webkit-transform: translateX(42px) translateY(42px) rotate(-179deg);
-    } 50.1% { 
-      transform: translateX(42px) translateY(42px) rotate(-180deg);
-      -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg);
-    } 75% { 
-      transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
-      -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
-    } 100% { 
-      transform: rotate(-360deg);
-      -webkit-transform: rotate(-360deg);
-    }
-  }
-  
-  .upper {
+.upper {
     height:50%;
     margin-top: 5px;
     position: relative;
@@ -106,6 +54,8 @@ You can also target devices with aspect ratio. */
     color: #4C4D4F;
     font-size: 8vw;
     text-align: center; 
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: bold;
   }
   
   h4 {
@@ -114,18 +64,10 @@ You can also target devices with aspect ratio. */
     margin: 1em;
     color: #4C4D4F;
     text-align: center; 
-  }
-  
-  .valueImage {
-    height: 50%;
-    margin:0px;
-  }
-
-  h2 {
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: bold;
   }
-  
+
   p {
     font-family: 'Source Sans Pro', sans-serif;
     color:#59BCED;
