[KMT] Fixed bugs, added major features

--- a/komunat/src/app/app.component.html
+++ b/komunat/src/app/app.component.html
@@ -10,7 +10,7 @@
         </ion-toolbar>
       </ion-header>
   <ion-split-pane>
-    <ion-menu>
+    <ion-menu swipe-gesture="false" type="overlay">
       <ion-header>
         <ion-toolbar>
           <ion-title>Menü</ion-title>
