--- a/komunat/src/app/komunat/komunat.page.html
+++ b/komunat/src/app/komunat/komunat.page.html
@@ -1,12 +1,23 @@
 <div class="container">
-    <ion-row>
-        <ion-col size="6">
-        <p>Welcher Wert ist dir wichtiger?</p>
-        </ion-col>
-        <ion-col size="4">
-        <p>WERTE</p>
-        </ion-col>
-    </ion-row>
+        <ion-row>
+                <ion-col size="6">
+                <p>Welcher Wert ist dir wichtiger?</p>
+                </ion-col>
+                <ion-col size="1">
+                </ion-col>
+                <ion-col size="3">
+                    <div class="progressContainer">
+                        <div class="progress">
+                          <div class="percent"></div>
+                        </div>
+                        <div class="steps">
+                          <div class="step selected" id="0"></div>
+                          <div class="step" id="1"></div>
+                          <div class="step" id="2"></div>
+                        </div>
+                      </div>
+                </ion-col>
+            </ion-row>
     <div class="buttonSection">
     <ion-card class="opt0 upper" (click) ="selected(0)">
             <h2 class=".opt0 beautify">{{this.btn0Val.name}}</h2>
