--- a/komunat/src/theme/fonts.scss
+++ b/komunat/src/theme/fonts.scss
@@ -4,3 +4,10 @@
     font-weight: 200;
     font-style: normal;
   }
+
+  @font-face {
+    font-family: 'Source Sans Pro Extra Light';
+    src: url('../assets/fonts/SourceSansPro-ExtraLight.ttf');
+    font-weight: 200;
+    font-style: normal;
+  }
