--- a/komunat/src/app/cdetail/cdetail.page.scss
+++ b/komunat/src/app/cdetail/cdetail.page.scss
@@ -16,21 +16,6 @@
     height: 100%;
 }
 
-.black {
-    color:var(--komunat-gray-dark)
-}
-
-.bold {
-    font-weight: bold;
-}
-
-.small {
-    font-size: 3vw;
-}
-.slim {
-    font-weight: lighter;
-}
-
 .cCardLeft {
     width: 100%;
     height:100%;
@@ -95,7 +80,6 @@ h2 {
 }
   
 h4 {
-    height: 5vh;
     font-size: 6vw;
     color: var(--komunat-gray-dark);
     margin:15px;
@@ -109,6 +93,21 @@ p {
     margin-bottom: 0px;
 }
 
+.black {
+    color:var(--komunat-gray-dark)
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.small {
+    font-size: 3vw;
+}
+.slim {
+    font-weight: lighter;
+}
+
 .eventTitle {
     margin-left:5px;
 }
@@ -120,6 +119,7 @@ p {
 
 .eventList {
     margin-top:20px;
+    width: 100%;
 }
 
 .event {
