--- a/komunat/src/app/content/content.page.scss
+++ b/komunat/src/app/content/content.page.scss
@@ -15,57 +15,6 @@ ion-col {
   width: auto;
 }
 
-.spinner {
-    width: 80px;
-    height: 80px;
-    position: absolute;
-    top:50%;
-    left: 50%;
-    margin-left: -30px;
-  }
-  
-  .cube1, .cube2 {
-    background-color: #333;
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    -webkit-animation: sk-cubemove 1.8s infinite ease-in-out;
-    animation: sk-cubemove 1.8s infinite ease-in-out;
-  }
-  
-  .cube2 {
-    -webkit-animation-delay: -0.9s;
-    animation-delay: -0.9s;
-  }
-  
-  @-webkit-keyframes sk-cubemove {
-    25% { -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5) }
-    50% { -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg) }
-    75% { -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5) }
-    100% { -webkit-transform: rotate(-360deg) }
-  }
-  
-  @keyframes sk-cubemove {
-    25% { 
-      transform: translateX(42px) rotate(-90deg) scale(0.5);
-      -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5);
-    } 50% { 
-      transform: translateX(42px) translateY(42px) rotate(-179deg);
-      -webkit-transform: translateX(42px) translateY(42px) rotate(-179deg);
-    } 50.1% { 
-      transform: translateX(42px) translateY(42px) rotate(-180deg);
-      -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg);
-    } 75% { 
-      transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
-      -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
-    } 100% { 
-      transform: rotate(-360deg);
-      -webkit-transform: rotate(-360deg);
-    }
-  }
-  
   .upper {
     height:50%;
     margin-top: 5px;
@@ -124,6 +73,10 @@ ion-col {
     margin-bottom: 0px;
   }
 
+  .small {
+    font-size:3vw;
+  }
+
   /* iPhone 5 
 You can also target devices with aspect ratio. */                       
 @media screen and (device-aspect-ratio: 40/71) {                              
@@ -131,4 +84,50 @@ You can also target devices with aspect ratio. */
     height: 60vh;
     width: auto;
   }               
+}
+
+
+// PROGRESS DOTS
+.progressContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.steps {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  width: 25vw;
+}
+.step {
+  width: 15px;
+  height: 15px;
+  background: white;
+  border: 2px solid var(--komunat-blue);
+  border-radius: 50%;
+  transition: background 1s;
+}
+.step.selected {
+  background: var(--komunat-blue);
+}
+.step.completed {
+  background: white;
+}
+
+.progress {
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  border-bottom: 2px solid  var(--komunat-blue);
+  z-index: -1;
+}
+.percent {
+  position: absolute;
+  width: 0;
+  height: 100%;
+  border-bottom: 2px solid #4B81BD;
+  z-index: 1;
+  transition: width 1s;
 }
