--- a/komunat/src/app/matches/matches.page.html
+++ b/komunat/src/app/matches/matches.page.html
@@ -16,18 +16,35 @@
 
   <div *ngIf="SHOW_STATE == 1"  class="content">
   <div @items *ngFor="let match of matches; let i = index" class="animated fadeInRight delay-{{ i }}s match_{{ i }}">
-    <ion-card class="candidateCard" (click) ="showDetails(i)">
+    <ion-card class="candidateCard">
+      <ion-row class="iconRow">
+        <ion-col size="3">
+          <div class="cCardLeft">
+              <div class="percentage">
+                100 % 
+              </div> 
+            </div>
+        </ion-col>
+
+        <ion-col size="6">
+
+        </ion-col>
+        <ion-col size="1">
+            <div class="reject" (click) ="reject(i)">
+                <ion-icon name="close-circle"></ion-icon>
+            </div>
+        </ion-col>
+      </ion-row>
+      <ion-row class="nameRow">
+          <p class="c_name">{{match.candidate.name}}, <span class="slim">30</span></p>
+      </ion-row>
       <ion-row class="fullHeight">
         <ion-col class="fullHeight" size="3">
           <div class="cCardLeft">
-            <div class="percentage">
-              100 % 
-            </div> 
               <ion-avatar>
                   <img src="https://komunat.de/uploads/00uk7chs5hDiBJLyb0h7.png"/>
                 </ion-avatar>
           </div>
-
         </ion-col>
         <ion-col size="1">
 
@@ -36,22 +53,21 @@
         <ion-col size="7">
 
           <div class="cCardRight">
-            <p class="c_name">{{match.candidate.name}}, <span class="slim">30</span></p>
             <div class="c_info">
               <p class="slim c_info_text">Liste: <span class="bold">{{match.candidate.list}}</span></p>
               <p class="slim c_info_text">Listenplatz: <span class="bold">{{match.candidate.list_number}}</span></p>
               <p class="slim c_info_text">Stadtbezirk: <span class="bold">{{match.candidate.district}}</span></p>     
           </div>       
           </div>
-
-          <div class="reject" (click) ="reject(i)">
-              <ion-icon name="close-circle"></ion-icon>
-          </div>
           <div class="detailArrow">
               <ion-icon name="arrow-dropright"></ion-icon>
           </div>
         </ion-col>
       </ion-row>
+      <div class="lefttopclickable" (click) ="showDetails(i)">
+        </div>
+      <div class="clickable" (click) ="showDetails(i)">
+        </div>
     </ion-card>
   </div>
 </div>
@@ -102,173 +118,59 @@
     </div>
   </div>
 
+  <div class="tutorial" *ngIf="NO_TUTORIAL==false">
+    <ion-slides zoom="false" pager="true">
+        <ion-slide>
+          <div class="tutorialContent">
+            <h5 class="left blue bold">Nur noch kurz</h5>
+            <br>
+            <div class="exampleBox">
+              
+            </div>
+            <div class="tutorialText">
+                <h5 class="white">
+                    Schiebe die Karte nach rechts oder links um den Kandidat aus deinem Team zu entfernen.
+                    <br>
+                    Oder Klicke auf <ion-icon class="red rejectIcon" name="close-circle"></ion-icon>
+                    <br>
+                    <br>
+                    Der nächste Kandidat rutscht automatisch in dein Team
+                    <br>
+                    <br>
+                </h5>
+              </div>
+              <ion-row class="tutBtn">
+                  <ion-col size=12>
+                   <ion-button (click) ="tutorialBtnClicked(0)" color="light" fill="outline" expand="block">Weiter</ion-button>
+                  </ion-col>
+              </ion-row>
+          </div>
+      </ion-slide>
 
 
-
+      <ion-slide>
+          <div class="tutorialContent">
+              <h5 class="left blue bold">Nur noch kurz</h5>
+              <br>
+                  <h5 class="white">
+                      Den entfernten Kandidat kannst du auf der Ersatzbank wiederfinden.
+                  </h5>
+                <ion-row class="tutBtn">
+                    <ion-col size=12>
+                     <ion-button (click) ="tutorialBtnClicked(1)" color="light" fill="outline" expand="block">Alles klar!</ion-button>
+                    </ion-col>
+                </ion-row>
+            </div>
+      </ion-slide>
+    </ion-slides>
+  </div>
 </div>
 
 
-
-
-
-<ion-footer>
-    <h1 class = "footer">Ergebnis per Mail senden</h1>
+<ion-footer *ngIf="NO_TUTORIAL==true">
+    <h1 (click)="showEmailSend()" class="footer">Ergebnis per Mail senden</h1>
 </ion-footer>
 
 </ion-content>
 
-<!--
-  <div class="container">
-  <ion-row>
-      <ion-col size="2">
-        <div text-center>
-            <ion-icon hidden class="topIcon backBtn" name="arrow-round-back" (click) = "backClicked()" ></ion-icon>
-            <ion-icon text-center class="topIcon substitutesBtn" name="filing" (click) = "showSubstitutes()"></ion-icon>
-        </div>
-      </ion-col>
-  
-      <ion-col size="2">
-          <div text-center>
-              <ion-icon text-center class="topIcon teamBtn" name="people"  (click) = "showTeam()"></ion-icon>
-            </div>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-  </ion-row>
-   
-<ion-content padding>
-   <div *ngIf="SHOW_STATE == 1" >
-     <div @items *ngFor="let match of matches; let i = index" class="animated fadeInRight delay-{{ i }}s match_{{ i }} candidateCard">
-       <div>
-         <div class="imageWrapper">
-           <img class="candidateImg" src="http://localhost:3000/uploads/{{match.uuid}}.png"/>
-
-         <div class="candidateInfoContainer">
-           <div class="candidateInfo"> 
-                   <ion-grid>
-                           <ion-row>
-                               <ion-col size=8>
-                                   <h2>{{match.name}}</h2>
-                               </ion-col>
-                               <ion-col size=4>
-                                      <div class="matchDiv">
-                                       {{match.distance}} %
-                                      </div>
-                                   </ion-col>
-                           </ion-row>
-                           <ion-row class="candidateInfoText">
-                                   <ion-col size=7>
-                                       <p><b>Partei:</b> {{match.list}}</p>
-                                   </ion-col>
-                                   <ion-col size=5>
-                                           <p><b>Alter:</b> {{match.birthdate}}</p>
-                                    </ion-col>
-                           </ion-row>
-                           <ion-row class="candidateInfoText">
-                                   <ion-col size=7>
-                                       <p><b>Wahlbezirk:</b> {{match.district}}</p>
-                                   </ion-col>
-                                   <ion-col size=5>
-                                           <p><b>Listenplatz:</b> {{match.list_number}}</p>
-                                    </ion-col>
-                           </ion-row>
-
-                           <ion-row>
-
-                               <div class="tinderButtonOuterWrapper">
-                                   <div class="reject" (click) ="reject(i)">
-                                   <ion-icon name="close-circle"></ion-icon>
-                                   </div>
-                                   <div class="match" (click) ="accept(i)">
-                                   <ion-icon name="checkmark-circle"></ion-icon>
-                                   </div>
-                                   </div>
-                           </ion-row>
-
-                   </ion-grid>
-           </div>
-         </div>
-       </div>
-   </div>
-   </div>
-
-
-   <div *ngIf="SHOW_STATE == 2"  >
-      <div @items *ngFor="let s of substitutes; let i = index" class="substituteList">
-          <div>
-              <div class="subsContainer">
-                  <ion-grid>
-                      <ion-row>
-                          <ion-col size=4 text-center>
-                              <ion-avatar class="substituteImg">
-                                <img src="http://localhost:3000/uploads/{{s.uuid}}.png"/>
-                              </ion-avatar>
-                          </ion-col>
-                          <ion-col class="subsDescription" size=8>
-                            <h2 class="subsHeader">{{s.name}}</h2>     
-                            <p><b>Übereinstimmung:</b> {{s.distance}}</p>                           
-                            <p><b>Partei:</b> {{s.list}}</p>
-                            <p><b>Wahlbezirk: </b>{{s.district}}</p>
-                          </ion-col>
-                      </ion-row>
-              </ion-grid>
-                <div class=""> 
-                        <ion-grid>
-                                <ion-row>
-                                  <ion-col size="12">
-                                      <ion-button color="secondary" shape="round" expand="block" (click)="backToMatches(0,i)">Zurück in die Auswahl</ion-button>
-                                  </ion-col>
-                                  </ion-row>
-                        </ion-grid>
-                </div>
-              </div>
-            </div>
-      </div>
-    </div>
-
-    <div *ngIf="SHOW_STATE == 3"  >
-        <div @items *ngFor="let s of team; let i = index" class="substituteList">
-            <div>
-                <div class="subsContainer">
-                    <ion-grid>
-                        <ion-row>
-                            <ion-col size=4>
-                                <ion-avatar class="substituteImg">
-                                  <img src="http://localhost:3000/uploads/{{s.uuid}}.png"/>
-                                </ion-avatar>
-                            </ion-col>
-                            <ion-col class="subsDescription" size=8>
-                               <h2 class="subsHeader">{{s.name}}</h2>     
-                              <p><b>Übereinstimmung:</b> {{s.distance}} %</p>                           
-                              <p><b>Partei:</b> {{s.list}}</p>
-                              <p><b>Wahlbezirk: </b>{{s.district}}</p>
-                            </ion-col>
-                        </ion-row>
-                </ion-grid>
-                  <div class=""> 
-                          <ion-grid>
-                                  <ion-row>
-                                    <ion-col size="12">
-                                        <ion-button color="secondary" shape="round" expand="block" (click)="backToMatches(1,i)">Raus aus meinem Team</ion-button>
-                                    </ion-col>
-                                    </ion-row>
-                          </ion-grid>
-                  </div>
-                </div>
-              </div>
-        </div>
-      </div>
-
-     <web-social-share show="false">
-           <ion-icon slot="facebook" name="logo-facebook"></ion-icon>
-           <ion-icon slot="twitter" name="logo-twitter"></ion-icon>
-           <ion-icon slot="linkedin" name="logo-linkedin"></ion-icon>
-           <ion-icon slot="email" name="mail"></ion-icon>
-           <ion-icon slot="whatsapp" name="logo-whatsapp"></ion-icon>
-     </web-social-share>
-
-</ion-content>
-
-</div>
--->
 
