--- a/komunat/src/app/matches/matches.page.scss
+++ b/komunat/src/app/matches/matches.page.scss
@@ -17,10 +17,25 @@
     font-size:12px;
 }
 
-
 .candidateCard {
-    height:160px;
+    height:180px;
     
+}
+
+.clickable {
+  position: absolute;
+  top:25%;
+  left:0px;
+  width:100%;
+  height:80%;
+}
+
+.lefttopclickable {
+  position: absolute;
+  top:0%;
+  left:0px;
+  width:80%;
+  height:25%;
 }
 
 .fullHeight {
@@ -29,6 +44,17 @@
 
 .black {
     color:var(--komunat-gray-dark)
+}
+
+.nameRow {
+  margin-top:5px;
+  margin-left:10px;
+  margin-bottom:5px;
+}
+
+.iconRow {
+  margin-left:-10px;
+  margin-top:0px;
 }
 
 .cCardLeft {
@@ -45,7 +71,7 @@
     display: block;
     margin-left: 10px;
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: 55%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
@@ -63,6 +89,24 @@
     color:white;
     font-weight: bold;
     padding:2px;
+}
+
+/* iPhone 5 
+You can also target devices with aspect ratio. */                       
+@media screen and (device-aspect-ratio: 40/71) {                              
+  .percentage {
+    background-color: #59BCED;
+    border-radius: 0px 10px 10px 0px;
+    height:5vw;
+    line-height: 5vw;
+    vertical-align: middle;
+    width:15vw;
+    position: absolute;
+    color:white;
+    font-weight: bold;
+    font-size:10px;
+    padding:2px;
+  }                
 }
 
 .cCardRight {
@@ -84,6 +128,13 @@
     margin: 1em;
     color: #4C4D4F;
     text-align: center; 
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: bold;
+  }
+
+  h5 {
+    margin-top:20px;
+    font-size: 5vw;
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: bold;
   }
@@ -118,15 +169,37 @@
     font-weight: lighter;
   }
 
+  .blue {
+    color:var(--komunat-blue)
+  }
+
+  .white {
+    color:white;
+  }
+
+  .red {
+    color: var(--komunat-red)
+  }
+
+  .left {
+    text-align: left;
+  }
+
   .reject {
     position: absolute;
     top:0px;
-    right:-10px;
+    right:-35px;
     width:8vw;
     border-radius:50%;
     text-align: center;
     font-size: 12vw;
     color: var(--komunat-red)
+}
+
+.rejectIcon {
+  -ms-transform: translate(0%, 35%);
+  transform: translate(0%, 35%);
+  font-size: 12vw;
 }
 
 .readd {
@@ -143,7 +216,7 @@
 .detailArrow {
     position: absolute;
     right:-10px;
-    top: 50%;
+    top:20%;
     left: 100%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
@@ -170,3 +243,50 @@
     left:0px;
     right:0px;
 }
+
+.tutorial {
+  position:fixed;
+  left:0;
+  top:0;
+  width:100%;
+  height:100%;
+  background: rgba(0,0,0,.8); 
+}
+
+.tutorialContent {
+  width:100vw;
+  height:93vh;
+  margin-top:8vh;
+  margin-left:20px;
+  margin-right:20px;
+}
+
+.exampleBox {
+  position: absolute;
+  height:23vh;
+  width:90%;
+  border-radius: 5px;
+  border: 2px solid;
+  border-color: white;
+}
+
+.tutorialText {
+  text-align: left;
+  margin-top:25vh;
+  width:90%;
+}
+
+
+.platform-android .tutBtn{
+  position: absolute;
+  bottom: 20%;
+  width: 90vw;
+}
+
+.platform-ios .tutBtn{
+  position: absolute;
+  bottom: 10%;
+  width: 90vw;
+}
+
+
